apps/guestbook2/overlays/03_frontend_deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook2-frontend
spec:
  selector:
    matchLabels:
      app: guestbook2
      tier: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook2
        tier: frontend
    spec:
      serviceAccountName: guestbook2-sa
      serviceAccount: guestbook2-sa
      containers:
        - name: frontend
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
          image: gcr.io/google-samples/gb-frontend:v6
          #image: paulczar/gb-frontend:v5
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
