apps/guestbook2/overlays/04_primary_database.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook2-redisprimary
spec:
  selector:
    matchLabels:
      app: guestbook2
      role: primary
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook2
        role: primary
        tier: backend
    spec:
      containers:
        - name: redis
          image: gcr.io/kubernetes-e2e-test-images/redis:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - primary
              topologyKey: kubernetes.io/hostname
