apps/guestbook2/overlays/06_secondary_database.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: guestbook2-redissecondary
spec:
  selector:
    matchLabels:
      app: guestbook2
      role: secondary
      tier: backend
  replicas: 1
  template:
    metadata:
      labels:
        app: guestbook2
        role: secondary
        tier: backend
    spec:
      containers:
      - name: redis-secondary
        image: gcr.io/google_samples/gb-redisslave:v3
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6379
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - primary
              topologyKey: kubernetes.io/hostname
