apps/guestbook2/overlays/02_frontend_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: guestbook2
  labels:
    app: guestbook2
spec:
  type: NodePort
  ports:
    - port: 80
  selector:
    app: guestbook2
    tier: frontend
