apps/guestbook2/overlays/05_primary_service.yaml
kind: Service
apiVersion: v1
metadata:
  name: redis-primary
spec:
  type: ClusterIP
  ports:
    - port: 6379
  selector:
    app: guestbook2
    role: primary
    tier: backend
