apps/guestbook2/overlays/08_guestbook_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: guestbook2
  name: guestbook2
spec:
  host: 
  port:
    targetPort: 80
  subdomain: ""
  to:
    kind: Service
    name: guestbook2
    weight: 100
  wildcardPolicy: None
